--- a/Obligatorio/MSGB/Templates/MSGB/index.html
+++ b/Obligatorio/MSGB/Templates/MSGB/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
+<h1>Sistema de Gestión de Biblioteca</h1>
 
 </body>
 </html>
