- se agregó listado de socios, copias y libro - se agregó un enlace a las funcionalidades en el index - se agregó info de la copia, y del libro - algunos métodos str para poder ver en el admin del django - lista de socios futuros. Hay que ver si incluye o no 7 días.

--- a/Obligatorio/MSGB/Templates/MSGB/index.html
+++ b/Obligatorio/MSGB/Templates/MSGB/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Biblio</title>
 </head>
 <body>
-<h1>Sistema de Gestión de Biblioteca</h1>
-
+	<h1>Sistema de Gestión de Biblioteca</h1>
+	<h3>Funcionalidades:</h3>
+	<ul>
+	<li>Préstamo</li>
+	<li>Devolución</li>	
+	<li><a href="/biblio/list_socios">Socios</a></li>
+	<li><a href="/biblio/list_copias">Copias</a></li>
+	<li><a href="/biblio/list_libros">Libros</a></li>
+	<li><a href="/biblio/morosos">Lista de morosos</a></li>
+	<li>Búsqueda de Préstamos en una fecha</li>
+	<li><a href="/biblio/futuros_morosos">Lista de futuros morosos</a></li>
+	</ul>
 </body>
 </html>
