- Se agregó la funcionalidad 8.

--- a/Obligatorio/MSGB/Templates/MSGB/index.html
+++ b/Obligatorio/MSGB/Templates/MSGB/index.html
@@ -14,7 +14,7 @@
 	<li><a href="/biblio/list_copias">Copias</a></li>
 	<li><a href="/biblio/list_libros">Libros</a></li>
 	<li><a href="/biblio/morosos">Lista de morosos</a></li>
-	<li>Búsqueda de Préstamos en una fecha</li>
+	<li><a href="/biblio/prestamo_fecha">Búsqueda de Préstamos en una fecha</a></li>
 	<li><a href="/biblio/futuros_morosos">Lista de futuros morosos</a></li>
 	</ul>
 </body>
