- Se agregó devolución y préstamo
TODO:
- hay que agregar try raise en todos lados
- verificar la condición de las fechas a ver si anda bien y el borde.
Para eso buscar el string "timedelta". Los resultados de la búsqueda van
a dar donde se usa

Entre otras cosas:
-agregar botones de cancelar
-agregar alta de los formularios
-darle un mejor look
-agregar el menú
-agregar ir al inicio 
-hacer nosotros una página de error

--- a/Obligatorio/MSGB/Templates/MSGB/index.html
+++ b/Obligatorio/MSGB/Templates/MSGB/index.html
@@ -8,8 +8,8 @@
 	<h1>Sistema de Gestión de Biblioteca</h1>
 	<h3>Funcionalidades:</h3>
 	<ul>
-	<li>Préstamo</li>
-	<li>Devolución</li>	
+	<li><a href="/biblio/prestamo/">Préstamo</a></li>
+	<li><a href="/biblio/devolucion/">Devolución</a></li>	
 	<li><a href="/biblio/list_socios">Socios</a></li>
 	<li><a href="/biblio/list_copias">Copias</a></li>
 	<li><a href="/biblio/list_libros">Libros</a></li>
