- agregué un template para probar nomas
TODO: 
hacer lo del header
footer 
etc etc lookear

--- a/Obligatorio/MSGB/Templates/MSGB/index.html
+++ b/Obligatorio/MSGB/Templates/MSGB/index.html
@@ -1,8 +1,13 @@
+  {% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>Biblio</title>
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
 </head>
 <body>
 	<h1>Sistema de Gestión de Biblioteca</h1>
