--- a/Obligatorio/MSGB/Templates/MSGB/listado_socios.html
+++ b/Obligatorio/MSGB/Templates/MSGB/listado_socios.html
@@ -1,8 +1,12 @@
+  {% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>Lista Socios</title>
+<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
 </head>
 <body>
 
