--- a/Obligatorio/MSGB/Templates/MSGB/listado_socios.html
+++ b/Obligatorio/MSGB/Templates/MSGB/listado_socios.html
@@ -1,14 +1,5 @@
-  {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Lista Socios</title>
-<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
-<link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 <a href="./socio/nuevo/">Agregar Socio</a>    
 
@@ -16,7 +7,7 @@
 <h3>Lista de socios:</h3>
 
 {% if socios_list %}
-    <table>    
+    <table class="table table-striped table-bordered table-hover">    
         <tr><th><strong>Documento</strong></th><th>Nombre</th><th>Email</th></tr> 
     {% for socio in socios_list %}
         <tr>        
@@ -29,6 +20,5 @@
 {% else %}
 <p>No se encontraron registros.</p>
 {% endif %}
-</body>
-</html>
+{% endblock %}
 
