Subo un par de bobadas

--- a/Obligatorio/MSGB/Templates/MSGB/index.html
+++ b/Obligatorio/MSGB/Templates/MSGB/index.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-	<h1>Sistema de Gestión de Biblioteca</h1>
-	<h3>Funcionalidades:</h3>
+	<h1>Sistema de Gesti&oacute;n de Biblioteca</h1>
+	<!--<h3>Funcionalidades:</h3>
 	<ul>
-	<li><a href="/biblio/prestamo/">Préstamo</a></li>
-	<li><a href="/biblio/devolucion/">Devolución</a></li>	
+	<li><a href="/biblio/prestamo/">Pr&eacute;stamo</a></li>
+	<li><a href="/biblio/devolucion/">Devoluci&oacute;n</a></li>	
 	<li><a href="/biblio/list_socios">Socios</a></li>
 	<li><a href="/biblio/list_copias">Copias</a></li>
 	<li><a href="/biblio/list_libros">Libros</a></li>
 	<li><a href="/biblio/morosos">Lista de morosos</a></li>
-	<li><a href="/biblio/prestamo_fecha">Búsqueda de Préstamos en una fecha</a></li>
+	<li><a href="/biblio/prestamo_fecha">B&uacute;squeda de Pr&eacute;stamos en una fecha</a></li>
 	<li><a href="/biblio/futuros_morosos">Lista de futuros morosos</a></li>
-	</ul>
+	</ul>-->
 {% endblock %}
