--- a/Obligatorio/MSGB/Templates/base.html
+++ b/Obligatorio/MSGB/Templates/base.html
@@ -30,11 +30,15 @@
 			<nav class="navbar-default navbar-side" role="navigation">
 				<div class="sidebar-collapse">
 					<ul id="main-menu" class="nav">
-						<li><a href="."><i class="fa fa-desktop "></i> Inicio</a></li>
-						<li><a href="/biblio/prestamo/"><i class="fa fa-edit "></i> Préstamo</a></li>
-						<li><a href="/biblio/devolucion/"><i class="fa fa-edit "></i> Devolución</a></li>
+						<li><a href="."><i class="fa fa-home "></i> Inicio</a></li>
+						<li><a href="/biblio/prestamo/"><i class="fa fa-arrow-right"></i> Pr&eacute;stamo</a></li>
+						<li><a href="/biblio/devolucion/"><i class="fa fa-arrow-left"></i> Devoluci&oacute;n</a></li>
 						<li><a href="/biblio/list_socios"><i class="fa fa-table "></i> Socios</a></li>
-						<li><a href="/biblio/list_copias"> <i class="fa fa-table "></i> Copias</a></li>
+						<li><a href="/biblio/list_copias"><i class="fa fa-table "></i> Copias</a></li>
+						<li><a href="/biblio/list_libros"><i class="fa fa-book "></i> Libros</a></li>
+						<li><a href="/biblio/morosos"><i class="fa fa-book "></i> Lista de morosos</a></li>
+						<li><a href="/biblio/prestamo_fecha"><i class="fa fa-clock-o "></i> B&uacute;squeda de Pr&eacute;stamos en una fecha</a></li>
+						<li><a href="/biblio/futuros_morosos"><i class="fa fa-clock-o "></i> Lista de futuros morosos</a></li>
 					</ul>
 				</div>
 			</nav>
