--- a/Obligatorio/MSGB/Templates/MSGB/info_libro.html
+++ b/Obligatorio/MSGB/Templates/MSGB/info_libro.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Info del Libro</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 	<h3>Datos del Libro:</h3>
-	<table>
+	<table class="table table-striped table-bordered table-hover">
 		<tr>
 			<td><strong>ISBN: </strong></td>
 			<td>{{ libro.isbn }}</td>
@@ -29,7 +24,7 @@
 	<h4>Copias:</h4>
 
 	{% if copias_list %}
-	<table>
+	<table class="table table-striped table-bordered table-hover">
 		<tr>
 			<th><strong>Nro Inventario</strong></th>
 			<th>Estado</th>
@@ -40,7 +35,7 @@
 			<td>{% if copia.disponible %} 
 					Disponible 
 				{% else %} 
-					En préstamo
+					En pr&eacute;stamo
 				{% endif %}</td>
 		</tr>
 		{% endfor %}
@@ -48,6 +43,5 @@
 	{% else %}
 	<p>No se encontraron registros.</p>
 	{% endif %}
-</body>
-</html>
+{% endblock %}
 
