--- a/Obligatorio/MSGB/Templates/MSGB/info_socio.html
+++ b/Obligatorio/MSGB/Templates/MSGB/info_socio.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Info del Socio</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <h3>Datos del socio:</h3>
-<table>	
+<table class="table table-striped table-bordered table-hover">	
 		<tr><td><strong>Documento: </strong></td><td>{{  socio.documento }}</td></tr> 
 		<tr><td><strong>Nombre: </strong></td><td>{{  socio.nombre }}</td></tr>
 		<tr><td><strong>Email: </strong></td><td>{{  socio.email }}</td></tr>
@@ -21,8 +16,8 @@
 <h4>Pr&eacute;stamos:</h4>
 
 {% if prestamo_list %}
-	<table>	
-		<tr><th><strong>ISBN</strong></th><th>TÃ­tulo</th><th>Fecha Inicio</th><th>Fecha Fin</th></tr> 
+	<table class="table table-striped table-bordered table-hover">	
+		<tr><th><strong>ISBN</strong></th><th>Título</th><th>Fecha Inicio</th><th>Fecha Fin</th></tr> 
 	{% for prestamo in prestamo_list %}
 		<tr>
 			<td>{{ prestamo.ejemplar.libro.isbn}}</td>
@@ -33,8 +28,8 @@
 	{% endfor %}
 	</table>
 {% else %}
-<p>No se ha efecutado un prÃ©stamo.</p>
+<p>No se ha efecutado un préstamo.</p>
 {% endif %}
-</body>
-</html>
+
+{% endblock %}
 
