--- a/Obligatorio/MSGB/Templates/MSGB/listado_copias.html
+++ b/Obligatorio/MSGB/Templates/MSGB/listado_copias.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Lista Copias</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 <h3>Nro Inventario:</h3>
 <form method="POST" action="./list_copias">
@@ -17,8 +12,8 @@
 <h3>Lista de Copias:</h3>
 
 {% if copias_list %}
-    <table>    
-        <tr><th><strong>Nro Inventario</strong></th><th><strong>ISBN</strong></th><th>Título</th><th>Autor</th><th>Estado</th></tr> 
+    <table class="table table-striped table-bordered table-hover">    
+        <tr><th><strong>Nro Inventario</strong></th><th><strong>ISBN</strong></th><th>T&iacute;tulo</th><th>Autor</th><th>Estado</th></tr> 
     {% for copia in copias_list %}
         <tr>        
         	<td><a href="./copia/{{ copia.num_inventario}} ">{{ copia.num_inventario }}</a> </td>        
@@ -28,7 +23,7 @@
             <td>{% if copia.disponible %} 
 					Disponible 
 				{% else %} 
-					En préstamo
+					En pr&eacute;stamo
 				{% endif %}</td>
         </tr>
     {% endfor %}
@@ -36,6 +31,6 @@
 {% else %}
 <p>No se encontraron registros.</p>
 {% endif %}
-</body>
-</html>
+
+{% endblock %}
 
