--- a/Obligatorio/MSGB/Templates/MSGB/listado_libros.html
+++ b/Obligatorio/MSGB/Templates/MSGB/listado_libros.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Lista Libros</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 
 <!--  <a href="./libro/nuevo/">Agregar Libro</a>     -->
 <h3>ISBN:</h3>
@@ -18,8 +13,8 @@
 <h3>Lista de libros:</h3>
 
 {% if libros_list %}
-    <table>    
-        <tr><th><strong>ISBN</strong></th><th>Título</th><th>Autor</th><th>Fecha Ingreso</th></tr> 
+    <table class="table table-striped table-bordered table-hover">    
+        <tr><th><strong>ISBN</strong></th><th>T&iacute;tulo</th><th>Autor</th><th>Fecha Ingreso</th></tr> 
     {% for libro in libros_list %}
         <tr>        
             <td><a href="./libro/{{ libro.isbn}}">{{ libro.isbn}}</a> </td>
@@ -32,6 +27,6 @@
 {% else %}
 <p>No se encontraron registros.</p>
 {% endif %}
-</body>
-</html>
+
+{% endblock %}
 
