--- a/Obligatorio/MSGB/Templates/MSGB/morosos.html
+++ b/Obligatorio/MSGB/Templates/MSGB/morosos.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Lista Morosos</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
 <h3>Lista de morosos:</h3>
 
 {% if morosos_list %}
-	<table>	
+	<table class="table table-striped table-bordered table-hover">	
 		<tr><th><strong>Documento</strong></th><th>Nombre</th><th>Email</th></tr> 
 	{% for moroso in morosos_list %}
 		<tr>
@@ -21,6 +17,6 @@
 {% else %}
 <p>No se encontraron registros.</p>
 {% endif %}
-</body>
-</html>
+
+{% endblock %}
 
