--- a/Obligatorio/MSGB/Templates/MSGB/prestamo_fecha.html
+++ b/Obligatorio/MSGB/Templates/MSGB/prestamo_fecha.html
@@ -1,10 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<head>
-<meta charset="UTF-8">
-    <title>Búsqueda{% if fecha %} Resultados{% endif %}</title>
-</head>
-<body>
-  <h1>Préstamos realizados en la fecha: </h1>
+{% extends "base.html" %}
+{% block content %}
+
+  <h1>Pr&eacute;stamos realizados en la fecha: </h1>
   <form action="." method="GET">
     <label for="fecha">Fecha (YYYY-MM-DD): </label>
     <input type="text" name="fecha" value="{{ fecha|escape }}" required> 
@@ -20,7 +17,7 @@
     <h2>Resultados para la fecha: {{ fecha|escape }}</h2>
  
     {% if results %}
-      <table>
+      <table class="table table-striped table-bordered table-hover">
       <tr><th>ISBN</th><th>Copia</th><th>Estado</th><th>Fecha Fin</th><th>Doc Socio</th><th>Nombre Socio</th></tr>
       {% for prestamo in results %}
         <tr><td>{{ prestamo.ejemplar.libro.isbn }}</td>
@@ -28,7 +25,7 @@
         <td>{% if prestamo.ejemplar.disponible %} 
 					Disponible 
 				{% else %} 
-					En préstamo
+					En pr&eacute;stamo
 				{% endif %}</td>
 				
 				<td>{{ prestamo.fecha_fin|date:"d/m/Y"}}</td>
@@ -41,5 +38,5 @@
       <p>No se encontraron registros</p>
     {% endif %}
   {% endif %}
-</body>
-</html>
+
+  {% endblock %}
