--- a/Obligatorio/MSGB/Templates/forms/devolver_form.html
+++ b/Obligatorio/MSGB/Templates/forms/devolver_form.html
@@ -1,6 +1,10 @@
+{% extends "base.html" %}
+{% block content %}
 
 <form method="post">
 	{% csrf_token %} 
 	{{ form.as_p}}
 	<button type="submit">Devolver</button>
 </form>
+
+{% endblock %}
