--- a/Obligatorio/MSGB/Templates/base.html
+++ b/Obligatorio/MSGB/Templates/base.html
@@ -30,7 +30,7 @@
 			<nav class="navbar-default navbar-side" role="navigation">
 				<div class="sidebar-collapse">
 					<ul id="main-menu" class="nav">
-						<li><a href="."><i class="fa fa-home "></i> Inicio</a></li>
+						<li><a href="/biblio/"><i class="fa fa-home "></i> Inicio</a></li>
 						<li><a href="/biblio/prestamo/"><i class="fa fa-arrow-right"></i> Pr&eacute;stamo</a></li>
 						<li><a href="/biblio/devolucion/"><i class="fa fa-arrow-left"></i> Devoluci&oacute;n</a></li>
 						<li><a href="/biblio/list_socios"><i class="fa fa-table "></i> Socios</a></li>
