--- a/Obligatorio/MSGB/Templates/base.html
+++ b/Obligatorio/MSGB/Templates/base.html
@@ -21,7 +21,7 @@
                     </button>
  <a class="navbar-brand" href=".">
                         <img src={% static "img/logo.png" %} />
-
+						<span style="color:#fff;">Sistema de Gesti&oacute;n de Biblioteca </span> 
                     </a>
 					</div>
 
