--- a/Obligatorio/MSGB/Templates/forms/prestamos_form.html
+++ b/Obligatorio/MSGB/Templates/forms/prestamos_form.html
@@ -3,7 +3,11 @@
 
 <form method="post">
 	{% csrf_token %} 
-	{{ form.as_p}}
+	<table>
+	<tr><td><label>Socio</label></td> <td style="padding-left: 40px;">{{ form.socio}}</td>
+	<tr><td><label>Libro</label></td> <td style="padding-left: 40px;">{{ form.libro}}</td>
+	</table> 
+	<br />
 	<button type="submit">Prestar</button>
 </form>
 
