--- a/Obligatorio/MSGB/Templates/forms/alta_socios.html
+++ b/Obligatorio/MSGB/Templates/forms/alta_socios.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+<script>
+<!--YYYY-MM-DD-->
+	$(function() {
+	    $( "#id_fecha_nacimiento" ).datepicker({
+	        dateFormat: "yy-mm-dd",
+	        autoSize: true,
+	        changeMonth: true,
+	        changeYear: true,
+	        selectOtherMonths: true
+	    });
+	});
+</script>
+
 <form method="post">
 	{% csrf_token %} 
 	<table>
