--- a/Obligatorio/MSGB/Templates/MSGB/listado_socios.html
+++ b/Obligatorio/MSGB/Templates/MSGB/listado_socios.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<a href="./socio/nuevo/">Agregar Socio</a>    
-
+<a href="./socio/nuevo/" style="float:right"><i class="fa fa-user fa-2x"></i><span style="padding-left:10px">Agregar Socio</span></a>    
 
 <h3>Lista de socios:</h3>
 
